<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present Instructure, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->

<resources>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mobileVerifyGeneral">This app is not authorized for use</string>
    <string name="mobileVerifyDomainUnauthorized">The server you entered is not authorized for this app.</string>
    <string name="mobileVerifyUserAgentUnauthorized">The user agent for this app is unauthorized.</string>
    <string name="mobileVerifyUnknownError">We were unable to verify the server for use with this app.</string>
    <string name="unknownDevice">UnknownDevice</string>
    <string name="errorOccurred">An unexpected error occurred.</string>
    <string name="pageNotFound">Page not found.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="help">Help</string>
    <string name="enterURL">Enter your Canvas URL:</string>
    <string name="signIntoCanvasNetwork">Trying to sign into Canvas Network?</string>
    <string name="remove">Remove</string>
    <string name="exampleURLSimple">myschool.instructure.com</string>
    <string name="masquerade">Masquerade</string>
    <string name="userId">User ID</string>
    <string name="domain">Domain</string>

    <string name="masqueradingUserId">Masquerade User ID</string>
    <string name="masqueradingUserDomain">Masquerade Domain</string>
    <string name="masqueradingBegin">Begin Masquerading</string>
    <string name="masqueradingStop">Stop Masquerading</string>

    <!--Multiple User Sign in -->
    <string name="removeUser">Remove this user?</string>
    <string name="removedForever">You\'ll have to sign into this user again to access their content.</string>

    <!--Content Descriptions-->
    <string name="canvasLogo">Canvas Logo</string>

    <string name="canvasLoginOn">Canvas_Login: ON</string>
    <string name="canvasLoginOff">Canvas_Login: OFF</string>
    <string name="siteAdminLogin">Site Admin Login: ON</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="authenticationRequired">Authentication Required</string>
    <string name="invalidEmailPassword">Invalid email or password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>

    <!--Logout Warning Dialog-->
    <string name="logout_warning">Are you sure you want to logout?</string>
    <string name="logout_yes">Yes</string>
    <string name="logout_no">No</string>

    <!--Smart Login-->

    <string name="loginNearYou">Near You</string>
    <string name="loginCanvasNetwork">Canvas Network</string>
    <string name="loginRightBehindYou">Right behind you</string>
    <string name="loginMiles">%1$s miles away</string>
    <string name="loginCanvasHelp">Don\'t see your school? Enter the school URL or tap here for help.</string>
    <string name="loginCanvasHelpWithUser">Enter the school URL or tap here for help.</string>
    <string name="loginHint">Find your school or district</string>

    <!-- Zendesk Dialog -->
    <string name="zendesk_reportAProblem">Report A Problem</string>
    <string name="zendesk_subject">Subject</string>
    <string name="zendesk_description">Description</string>
    <string name="zendesk_writeSomething">Write Something…</string>
    <string name="zendesk_send">Send</string>
    <string name="zendesk_feedbackThankyou">Thank you for reporting your issue to our Support Team.  You will receive verification and updates via email.</string>
    <string name="zendesk_severityText">How is this affecting you?</string>
    <string name="zendesk_casualQuestion">Just a casual question, comment, idea, suggestion…</string>
    <string name="zendesk_casualQuestion_tag">just_a_comment</string>
    <string name="zendesk_needHelp">I need some help but it\'s not urgent.</string>
    <string name="zendesk_needHelp_tag">not_urgent</string>
    <string name="zendesk_somethingsBroken">Something\'s broken but I can work around it to get what I need done.</string>
    <string name="zendesk_somethingsBroken_tag">workaround_possible</string>
    <string name="zendesk_cantGetThingsDone">I can\'t get things done until I hear back from you.</string>
    <string name="zendesk_cantGetThingsDone_tag">blocks_what_i_need_to_do</string>
    <string name="zendesk_extremelyCritical">EXTREME CRITICAL EMERGENCY!!</string>
    <string name="zendesk_extremelyCritical_tag">extreme_critical_emergency</string>
    <string name="zendesk_emailAddress">Email Address</string>
    <string name="zendesk_enterEmail">Enter your email address…</string>
    <string name="zendesk_unknown">Unknown</string>

    <!-- Distance Strings -->
    <string name="lessThanOne">&lt; 1 mile (1.6 km)</string>
    <string name="oneMile">1 mile (1.6 km)</string>
    <string name="miles">miles</string>
    <string name="kilometers">km</string>

    <!-- String for submitting tickets -->
    <string name="device">Device</string>
    <string name="osVersion">OS Version</string>

    <string name="previousLoginTitle">Previous Logins</string>
    <string name="canvasNetworks">Canvas Network</string>
    <string name="findMySchool">Find my school</string>
    <string name="appTypeTeacher">Teacher</string>
    <string name="appTypeStudent">Student</string>
    <string name="appTypeParent">Parent</string>
    <string name="canvasLowerCase">canvas</string>
    <string name="whatsYourSchoolName">What\'s your school\'s name?</string>
    <string name="next">Next</string>
    <string name="schoolInstructureCom">school.instructure.com</string>
    <string name="contentDescription_removePreviousUser">Remove Previous User</string>
    <string name="accountDomainFooter">Can\'t find your school? Try typing the full school URL.</string>
    <string name="accountDomainFooterLink">Tap here for help.</string>

    <string name="login_noInternetConnectionTitle">No Internet Connection</string>
    <string name="login_noInternetConnectionMessage">This action requires an internet connection.</string>
    <string name="empty_feedback">A subject and description are required to submit feedback.</string>
    <string name="versionNum">Version Number</string>
    <string name="scrollInstructions">Scroll to see all details</string>

    <string name="masqueradeErrorUserId">You must enter a user id.</string>
    <string name="masqueradeErrorDomain">You must enter a domain.</string>
    <string name="masqueradeError">Error trying to masquerade.</string>
</resources>
