<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present Instructure, Inc.
  ~
  ~     Licensed under the Apache License, Version 2.0 (the "License");
  ~     you may not use this file except in compliance with the License.
  ~     You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~     Unless required by applicable law or agreed to in writing, software
  ~     distributed under the License is distributed on an "AS IS" BASIS,
  ~     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~     See the License for the specific language governing permissions and
  ~     limitations under the License.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:paddingBottom="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:contentDescription="@string/scrollInstructions">

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/subjectEditText"
            android:text="@string/zendesk_subject"
            android:textSize="14sp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:id="@+id/subjectEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/zendesk_rounded_corner"
            android:padding="8dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/emailAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/emailAddressEditText"
            android:text="@string/zendesk_emailAddress"
            android:textSize="14sp"
            android:visibility="gone"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_margin="4dp"
            android:background="@drawable/zendesk_rounded_corner"
            android:hint="@string/zendesk_enterEmail"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textSize="14sp"
            android:visibility="gone"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/descriptionEditText"
            android:layout_marginTop="8dp"
            android:text="@string/zendesk_description"
            android:textSize="14sp"
            android:fontFamily="sans-serif-black"/>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@drawable/zendesk_rounded_corner"
            android:gravity="top"
            android:hint="@string/zendesk_writeSomething"
            android:inputType="textMultiLine"
            android:minHeight="75dp"
            android:padding="8dp"
            android:paddingTop="4dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/severityPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/severitySpinner"
            android:layout_marginTop="8dp"
            android:text="@string/zendesk_severityText"
            android:textSize="14sp"
            android:fontFamily="sans-serif-black"/>

        <Spinner
            android:id="@+id/severitySpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

    </LinearLayout>

</ScrollView>