<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 - present  Instructure, Inc.
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation, version 3 of the License.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License
  ~     along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/loginContentWrapper"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/previousLoginWrapper"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/canvasLogo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            app:srcCompat="@drawable/vd_canvas_logo"
            android:importantForAccessibility="no"
            android:layout_marginBottom="-8dp"/>

        <TextView
            android:id="@+id/canvasName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:src="@drawable/canvas"
            android:textColor="@color/login_grayCanvasLogo"
            android:textSize="56sp"
            android:text="@string/canvasLowerCase" />

        <TextView
            android:id="@+id/appDescriptionType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:fontFamily="sans-serif-black"
            android:textAllCaps="true"
            android:textColor="@color/login_teacherAppTheme"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/appTypeTeacher" />

        <Button
            android:id="@+id/findMySchool"
            android:layout_width="240dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/findMySchool" />

        <TextView
            android:id="@+id/canvasNetwork"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:text="@string/canvasNetworks"
            android:textSize="16sp"
            android:textColor="@color/login_grayText"
            android:background="?android:selectableItemBackground"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/previousLoginWrapper"
        android:layout_width="@dimen/previousLoginWidth"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone">

        <TextView
            android:id="@+id/previousLoginTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="start"
            android:text="@string/previousLoginTitle"
            android:textColor="@color/login_grayText"
            android:textSize="16sp" />

        <View
            android:id="@+id/previousLoginDivider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/login_dividerColor"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/previousLoginRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_previousLoginHeight_2x"
            android:overScrollMode="never"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:clipToPadding="false"
            android:clipChildren="false"/>

    </LinearLayout>

</RelativeLayout>